fix mobile placeholder overflow on HashtagTextArea

--- a/client/src/components/HashtagTextArea.css
+++ b/client/src/components/HashtagTextArea.css
@@ -1,10 +1,13 @@
-.__HashtagTextAreaComponent--placeholder__:empty::before {
+.__HashtagTextAreaComponent--placeholder__:empty:not(:focus)::before {
   content: attr(placeholder);
   font-size: 1.5rem;
   font-weight: 400;
   color: var(--color-grey-dark-1);
 }
 
+.__HashtagTextAreaComponent__:not(.__HashtagTextAreaComponent-overflow-hidden__) {
+  height: auto;
+}
 .__HashtagTextAreaComponent__ {
   word-break: break-word;
 }
