--- a/client/src/components/pages/CreatePoll/CreatePoll.css
+++ b/client/src/components/pages/CreatePoll/CreatePoll.css
@@ -74,7 +74,7 @@
   margin-left: 30px;
 }
 
-.form-form-wrapper {
+.poll-create-form {
   max-width: 940px;
 }
 
